--- a/languages/en_GB.po
+++ b/languages/en_GB.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: FAU v1.2.7\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-10-06 07:33+0000\n"
-"PO-Revision-Date: 2017-10-06 08:01+0000\n"
+"PO-Revision-Date: 2017-12-13 10:27+0000\n"
 "Last-Translator: Wolfgang Wiese <wolfgang.wiese@fau.de>\n"
 "Language-Team: English (UK)\n"
 "Language: en-GB\n"
@@ -271,7 +271,7 @@ msgid ""
 "Die von Ihnen aufgerufene Seite existiert nicht oder ihre Adresse hat sich "
 "durch Änderungen an der Seitenstruktur geändert."
 msgstr ""
-"The page you are looking for does not exsit or its URL has been changed by "
+"The page you are looking for does not exist or its URL has been changed by "
 "modifications in the site structure."
 
 #: ../404.php:52
