--- a/languages/en_US.po
+++ b/languages/en_US.po
@@ -842,10 +842,17 @@ msgstr ""
 msgid "Erlaubte Anzahl an Zeichen:"
 msgstr "Allowed number of characters:"
 
+#: functions/constants.php:955, functions/template-functions.php:457
+msgid "Erstellungsdatum zeigen"
+msgstr "Show creation date"
+
+#: functions/constants.php:960, functions/template-functions.php:457
+msgid "Kategorie zeigen"
+msgstr "Show Categories"
+
 #: functions/constants.php:970
 msgid "Zeige die Artikel im Zickzack-Format an."
 msgstr "Display the articles in zigzag format."
-
 
 # Im Deutschen fehlt ein Komma: "Ermöglicht es, Beiträge..."
 #: functions/constants.php:1055
