--- a/languages/en_GB.po
+++ b/languages/en_GB.po
@@ -642,6 +642,19 @@ msgstr ""
 msgid "Der Shortcode darf nur auf Seiten verwendet werden."
 msgstr "This shortcode is only allowed in pages."
 
+#: functions/shortcodes.php:307
+msgid "Keine relevanten Beiträge gefunden"
+msgstr "No relevant posts found"
+
+#: functions/constants.php:955, functions/template-functions.php:457
+msgid "Erstellungsdatum zeigen"
+msgstr "Show creation date"
+
+#: functions/constants.php:960, functions/template-functions.php:457
+msgid "Kategorie zeigen"
+msgstr "Show Categories"
+
+
 #: functions/constants.php:1351
 msgid ""
 "Der Sprachschalter wird im produktiven Betrieb durch eines der Plugins CMS "
